<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="access_sd_fail">"Couldn't access SD card."</string>
    <string name="accessibility_ai_scene_off">AI camera is off</string>
    <string name="accessibility_ai_scene_on">AI camera is on</string>
    <string name="accessibility_back_preview_status">Rear camera preview</string>
    <string name="accessibility_beauty_panel_closed">Beautify menu is hidden</string>
    <string name="accessibility_beauty_panel_open">Beautify menu is opened</string>
    <string name="accessibility_beauty_switch_closed">Beautify is off</string>
    <string name="accessibility_beauty_switch_open">Beautify is on</string>
    <string name="accessibility_bokeh_adjust">Adjusting background blur</string>
    <string name="accessibility_bokeh_level">F%1$s aperture</string>
    <string name="accessibility_bokeh_normal">Front camera background blur is off</string>
    <string name="accessibility_bokeh_on">Front camera background blur is on</string>
    <string name="accessibility_camera_lighting_close_panel">Closed lighting effects menu</string>
    <string name="accessibility_camera_lighting_open_panel">Opened lighting effects menu</string>
    <string name="accessibility_camera_liveshot_off">Turned off dynamic shots</string>
    <string name="accessibility_camera_liveshot_on">Turned on dynamic shots</string>
    <string name="accessibility_camera_picker">Front and rear camera switch</string>
    <string name="accessibility_camera_picker_finish">Switched cameras successfully</string>
    <string name="accessibility_camera_record_start">Started recording video</string>
    <string name="accessibility_camera_record_stop">Stopped recording video</string>
    <string name="accessibility_camera_shutter_finish">Took a photo successfully</string>
    <string name="accessibility_camera_switch_capture_recording">Switch between photo and video modes</string>
    <string name="accessibility_camera_ultra_wide_bokeh_off">Full body mode is off</string>
    <string name="accessibility_camera_ultra_wide_bokeh_on">Full body mode is on</string>
    <string name="accessibility_camera_video_960fps_120">120FPS</string>
    <string name="accessibility_camera_video_960fps_240">240FPS</string>
    <string name="accessibility_camera_video_960fps_960">960FPS</string>
    <string name="accessibility_camera_video_fps_120">120FPS</string>
    <string name="accessibility_camera_video_fps_30">30FPS</string>
    <string name="accessibility_closed">Turned off</string>
    <string name="accessibility_effect_mode_button">Effect button</string>
    <string name="accessibility_eis_normal">EIS is on</string>
    <string name="accessibility_eis_off">EIS is off</string>
    <string name="accessibility_eis_pro">EIS Pro is on</string>
    <string name="accessibility_filter_close_panel">Closed filter menu</string>
    <string name="accessibility_filter_open_panel">Opened filter menu</string>
    <string name="accessibility_filter_pad_close">Filter menu is hidden</string>
    <string name="accessibility_flash_auto">Auto flash is on</string>
    <string name="accessibility_flash_back_soft_light">Flash is working in the Soft light mode</string>
    <string name="accessibility_flash_off">Flash is off</string>
    <string name="accessibility_flash_on">Flash is on</string>
    <string name="accessibility_flash_torch">Flash is on, torch mode</string>
    <string name="accessibility_focus_status">%1$sX zoom</string>
    <string name="accessibility_foucs_peak">Peak value</string>
    <string name="accessibility_front_preview_status">Front camera preview</string>
    <string name="accessibility_hdr">HDR switch button</string>
    <string name="accessibility_hdr_auto">Auto HDR is on</string>
    <string name="accessibility_hdr_live">HDR Live is on</string>
    <string name="accessibility_hdr_normal">HDR Pro is on</string>
    <string name="accessibility_hdr_off">HDR is off</string>
    <string name="accessibility_hdr_on">HDR is on</string>
    <string name="accessibility_intent_done_apply">Done</string>
    <string name="accessibility_intent_done_retry">Retry</string>
    <string name="accessibility_lighting_panel_off">Studio lighting bar is hidden</string>
    <string name="accessibility_lighting_panel_on">Showing studio lighting bar</string>
    <string name="accessibility_mimovie_off">Not using movie frame</string>
    <string name="accessibility_mimovie_on">Using movie frame</string>
    <string name="accessibility_more">More</string>
    <string name="accessibility_open">Turned on</string>
    <string name="accessibility_peak">Focus peak button</string>
    <string name="accessibility_portrait_button">Portrait mode</string>
    <string name="accessibility_protrait">Portrait</string>
    <string name="accessibility_pull_down_to_open_camera">Swipe down to open camera</string>
    <string name="accessibility_record_button">Record button</string>
    <string name="accessibility_review_thumbnail">Most recent photo</string>
    <string name="accessibility_selected">Selected items</string>
    <string name="accessibility_setting">Settings</string>
    <string name="accessibility_shutter_button">Shutter button</string>
    <string name="accessibility_stereo_button">Focus adjustment</string>
    <string name="accessibility_ultra_pixel_photography_off">%s Ultra HD is off</string>
    <string name="accessibility_ultra_pixel_photography_on">%s Ultra HD is on</string>
    <string name="accessibility_ultra_wide_off">Turned off Ultra wide angle mode</string>
    <string name="accessibility_ultra_wide_on">Turned on Ultra wide angle mode</string>
    <string name="accessibility_video_btn_play">Play video</string>
    <string name="accessibility_video_capture_button">Button for taking photos while shooting videos</string>
    <string name="accessibility_video_pause_button">Paused recording video</string>
    <string name="accessibility_video_resume_button">Resumed recording video</string>
    <string name="accessibility_zoom_button">Zoom mode</string>
    <string name="ai_scene_mode_use_hint_text">"Recognize scenes using AI
and adjust preferences automatically"</string>
    <string name="ai_scene_top_moon_off">Low light mode</string>
    <string name="ai_scene_top_tip">Moon mode</string>
    <string name="ai_watermark_title">AI watermark</string>
    <string name="app_name">EffectManager</string>
    <string name="audio_focus_exit_button_text">Turn off Audio focus</string>
    <string name="autozoom_click_hint">"Tap an object to keep it in focus while it's moving. Stay at least 3 meters away for best effect."</string>
    <string name="autozoom_disabled_hint">Stopped tracking moving object</string>
    <string name="autozoom_hint">Track moving object</string>
    <string name="autozoom_landscape_hint">Shoot in landscape mode for best effect</string>
    <string name="auxiliary_close_status">Additional effects are off</string>
    <string name="auxiliary_exposure_feedback_status">Exposure verification is on</string>
    <string name="auxiliary_focus_peak_status">Focus peaking is on</string>
    <string name="back_bokeh_use_hint">Keep your subject within 1.5 meters for best effect</string>
    <string name="background">Background</string>
    <string name="beauty_body">Figure</string>
    <string name="beauty_body_body">Slender</string>
    <string name="beauty_body_head">Head</string>
    <string name="beauty_body_legged">Legs</string>
    <string name="beauty_body_reset_tip">Cleared figure effects successfully</string>
    <string name="beauty_body_shoulder">Shoulders</string>
    <string name="beauty_body_slim_count_tip">Figure effects work only for one person shots</string>
    <string name="beauty_body_whole">Body</string>
    <string name="beauty_clear">Clear</string>
    <string name="beauty_clear_toast">Cleared Beautify effects successfully</string>
    <string name="beauty_fragment_tab_name_3d_beauty">Beauty</string>
    <string name="beauty_fragment_tab_name_3d_makeup">Makeup</string>
    <string name="beauty_fragment_tab_name_3d_remodeling">Remodeling</string>
    <string name="beauty_fragment_tab_name_beauty">Beauty</string>
    <string name="beauty_fragment_tab_name_makeup">Advanced</string>
    <string name="beauty_level_1">1</string>
    <string name="beauty_level_2">2</string>
    <string name="beauty_level_3">3</string>
    <string name="beauty_level_4">4</string>
    <string name="beauty_level_5">5</string>
    <string name="beauty_mode_reset_toast">Cleared remodeling effects successfully</string>
    <string name="beauty_reset">Reset</string>
    <string name="beauty_reset_toast">Reset Beautify effects successfully</string>
    <string name="beauty_tab_name_live_beauty">Beautify</string>
    <string name="beauty_tab_name_live_filter">Filters</string>
    <string name="bokeh_use_hint">Depth effect</string>
    <string name="burst_shoot_exit_button_text">Turn off Burst shoot</string>
    <string name="button_fisheye_camera_title">Fisheye</string>
    <string name="button_front_camera_title">Make a selfie</string>
    <string name="button_normal_video_title">Record video</string>
    <string name="camcorder_tip_8k_max_video_duration">You can record up to 6 minutes in 8K</string>
    <string name="clone_guide_tip1">请保持手机稳定、光线充足</string>
    <string name="clone_guide_tip2">避开移动物体及纯色背景</string>
    <string name="clone_guide_tip3">仅支持人像拍摄</string>
    <string name="clone_guide_tip4">最多可支持4个分身</string>
    <string name="clone_guide_title1">01</string>
    <string name="clone_guide_title2">拍照教程</string>
    <string name="emoticon">Sticker pack</string>
    <string name="mimoji_gif_accelerate">Speed</string>
    <string name="mimoji_gif_clear_bg">Remove background</string>
    <string name="mimoji_gif_edit_hint">Tap to add text</string>
    <string name="mimoji_gif_edit_title">Edit GIF</string>
    <string name="mimoji_gif_reverse">Reverse</string>
    <string name="mimoji_save">Save</string>
    <string name="share">Share</string>
    <string name="vv_hint">You can shoot vlogs only in the landscape mode</string>
    <string name="vv_stability_hint">Keep your device stable</string>
</resources>