<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.android.camera.ui.vv.VVProgressView android:id="@id/vv_progress" android:layout_width="@dimen/vv_progress_width" android:layout_height="@dimen/vv_progress_height" android:layout_marginLeft="@dimen/vv_progress_margin_left" />
    <FrameLayout android:id="@id/vv_preview_layout" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <TextView android:textSize="@dimen/vv_hint_text_size" android:textColor="@color/white" android:layout_gravity="center|right" android:id="@id/vv_stability_hint" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="-70.0dip" android:text="@string/vv_stability_hint" android:shadowColor="#bb000000" android:shadowRadius="2.75" />
    <TextView android:textSize="@dimen/vv_hint_text_size" android:textColor="@color/white" android:layout_gravity="center" android:id="@id/vv_process_hint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vv_hint" android:shadowColor="#bb000000" android:shadowRadius="2.75" />
    <ImageView android:layout_gravity="center" android:id="@id/vv_preview_thumb" android:focusable="false" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="centerInside" />
    <ImageView android:layout_gravity="center" android:id="@id/vv_preview_play" android:focusable="false" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_live_record_play" android:scaleType="centerInside" />
    <ProgressBar android:layout_gravity="center" android:id="@id/vv_concat_progress" android:background="@drawable/bg_thumbnail_background" android:padding="15.0dip" android:layout_width="@dimen/bottom_snap_progress_width" android:layout_height="@dimen/bottom_snap_progress_width" android:indeterminateDrawable="@drawable/vv_process_progress" android:indeterminateDuration="700" style="?android:progressBarStyleLarge" />
    <FrameLayout android:layout_gravity="bottom" android:id="@id/vv_preview_bottom_action" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <RelativeLayout android:id="@id/vv_preview_bottom_parent" android:clipChildren="false" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ImageView android:id="@id/vv_preview_back" android:layout_width="@dimen/bottom_picker_width" android:layout_height="@dimen/bottom_picker_width" android:src="@drawable/ic_live_record_back" android:scaleType="centerInside" android:layout_centerVertical="true" android:layout_marginStart="@dimen/bottom_picker_margin" android:layout_alignParentStart="true" />
            <ImageView android:id="@id/vv_segment_preview" android:layout_width="@dimen/bottom_picker_width" android:layout_height="@dimen/bottom_picker_width" android:src="@drawable/ic_live_record_play" android:scaleType="centerInside" android:layout_centerVertical="true" android:layout_marginStart="@dimen/bottom_picker_margin" android:layout_alignParentStart="true" />
            <com.android.camera.ui.CameraSnapView android:id="@id/vv_preview_save_circle" android:focusable="false" android:clickable="true" android:layout_width="@dimen/bottom_snap_width" android:layout_height="@dimen/bottom_snap_width" android:layout_centerInParent="true" android:contentDescription="@string/accessibility_shutter_button" />
            <FrameLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
                <ImageView android:id="@id/vv_preview_save" android:focusable="false" android:clickable="true" android:layout_width="@dimen/vv_progress_save_width" android:layout_height="@dimen/vv_progress_save_width" android:layout_marginLeft="2.0dip" android:layout_marginTop="2.0dip" android:src="@drawable/ic_vv_save" android:scaleType="centerInside" />
            </FrameLayout>
            <ImageView android:id="@id/vv_preview_next" android:focusable="false" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_live_record_next" android:scaleType="centerInside" android:layout_centerInParent="true" />
            <ProgressBar android:id="@id/vv_save_progress" android:visibility="gone" android:layout_width="@dimen/vv_progress_loading_width" android:layout_height="@dimen/vv_progress_loading_width" android:indeterminateDrawable="@drawable/vv_process_progress" android:indeterminateDuration="700" android:layout_centerInParent="true" style="?android:progressBarStyleLarge" />
            <ImageView android:layout_gravity="center" android:id="@id/vv_preview_share" android:focusable="false" android:layout_width="@dimen/bottom_picker_width" android:layout_height="@dimen/bottom_picker_width" android:src="@drawable/ic_live_record_share" android:scaleType="centerInside" android:layout_centerVertical="true" android:contentDescription="@null" android:layout_marginEnd="@dimen/bottom_picker_margin" android:layout_alignParentEnd="true" />
            <ProgressBar android:layout_gravity="center" android:id="@id/vv_share_progress" android:background="@drawable/ic_vv_share_bg" android:padding="12.0dip" android:focusable="false" android:layout_width="@dimen/bottom_picker_width" android:layout_height="@dimen/bottom_picker_width" android:scaleType="centerInside" android:indeterminateDrawable="@drawable/vv_process_progress" android:indeterminateDuration="700" android:layout_centerVertical="true" android:layout_marginEnd="@dimen/bottom_picker_margin" android:layout_alignParentEnd="true" style="?android:progressBarStyleLarge" />
            <ImageView android:layout_gravity="center" android:id="@id/vv_segment_reverse" android:focusable="false" android:layout_width="@dimen/bottom_picker_width" android:layout_height="@dimen/bottom_picker_width" android:src="@drawable/ic_live_record_delete" android:scaleType="centerInside" android:layout_centerVertical="true" android:contentDescription="@null" android:layout_marginEnd="@dimen/bottom_picker_margin" android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </FrameLayout>
    <include layout="@layout/fragment_vv_exit" />
    <include layout="@layout/fragment_vv_share" />
</FrameLayout>