<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/rl_gif_full_screen_consume_click" android:background="@color/black" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center_vertical" android:id="@id/rv_top_navigation_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_gif_top_navigation_layout_margin_horizontal" android:layout_marginTop="@dimen/dimen_gif_top_navigation_layout_layout_marginTop" android:layout_marginRight="@dimen/dimen_gif_top_navigation_layout_margin_horizontal" android:layout_alignParentStart="true">
        <ImageView android:gravity="right" android:id="@id/iv_gif_share" android:paddingLeft="@dimen/dimen_gif_iv_gif_share_layout_padding" android:paddingTop="@dimen/dimen_gif_iv_gif_share_layout_padding" android:paddingBottom="@dimen/dimen_gif_iv_gif_share_layout_padding" android:layout_width="@dimen/dimen_gif_iv_gif_share_layout_width" android:layout_height="@dimen/dimen_gif_iv_gif_share_layout_height" android:src="@drawable/ic_gif_share" android:scaleType="centerInside" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <FrameLayout android:id="@id/ll_operate_gif_words" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_gif_ll_operate_gif_words_height" android:layout_marginTop="@dimen/dimen_gif_ll_operate_gif_words_top_margin" android:layout_below="@id/rv_top_navigation_layout">
        <com.android.camera.features.mimoji2.fragment.gif.MiFitTextureView android:layout_gravity="top" android:id="@id/gif_texture_view" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <RelativeLayout android:layout_gravity="bottom|center" android:id="@id/rl_Et_container" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <FrameLayout android:id="@id/fl_Et_container" android:paddingLeft="@dimen/dimen_gif_fl_Et_container_top_margin" android:paddingRight="@dimen/dimen_gif_fl_Et_container_top_margin" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <LinearLayout android:gravity="center" android:id="@id/ll_stoke" android:background="@drawable/shape_gif_null_words" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/dimen_gif_ll_stoke_margin">
                    <com.android.camera.features.mimoji2.fragment.gif.GifEditText android:textSize="@dimen/dimen_gif_subtile_textsize" android:textColor="@color/white" android:gravity="center" android:id="@id/et_gif_words" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/dimen_gif_et_gif_words_margin" android:hint="@string/mimoji_gif_edit_hint" android:layout_centerVertical="true" />
                </LinearLayout>
                <ImageView android:layout_gravity="right" android:id="@id/iv_delete_gif_txt" android:visibility="gone" android:layout_width="@dimen/dimen_gif_iv_delete_gif_txt_width" android:layout_height="@dimen/dimen_gif_iv_delete_gif_txt_height" android:src="@drawable/ic_gif_text_delete" android:scaleType="centerInside" android:layout_alignParentRight="true" />
            </FrameLayout>
        </RelativeLayout>
    </FrameLayout>
    <RelativeLayout android:id="@id/rl_operate_gif_bottom_panel" android:layout_width="wrap_content" android:layout_height="@dimen/dimen_gif_rl_operate_gif_bottom_panel_height" android:layout_alignParentBottom="true">
        <LinearLayout android:orientation="horizontal" android:id="@id/ll_fuc_opera" android:paddingLeft="@dimen/dimen_gif_ll_fuc_opera_padding_horizontal" android:paddingTop="@dimen/dimen_gif_ll_fuc_opera_paddingTop" android:paddingRight="@dimen/dimen_gif_ll_fuc_opera_padding_horizontal" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_gif_ll_fuc_opera_height">
            <LinearLayout android:gravity="center" android:id="@id/ll_clear_bg_out" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:id="@id/ll_clear_bg" android:background="@drawable/bg_btn_mimoji_edit_black" android:layout_width="@dimen/dimen_gif_ll_clear_bg_width" android:layout_height="@dimen/dimen_gif_ll_clear_bg_height">
                    <ImageView android:id="@id/iv_clear_bg" android:background="@drawable/ic_gif_clear_bg" android:padding="@dimen/dimen_gif_iv_clear_bg_padding" android:layout_width="@dimen/dimen_gif_iv_clear_bg_width" android:layout_height="@dimen/dimen_gif_iv_clear_bg_height" android:scaleType="center" />
                    <TextView android:textColor="@color/white" android:gravity="center" android:id="@id/tv_clear_bg" android:layout_width="wrap_content" android:layout_height="@dimen/dimen_gif_tv_clear_bg_height" android:layout_marginTop="@dimen/dimen_gif_tv_clear_bg_marginTop" android:text="@string/mimoji_gif_clear_bg" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/ll_accelerate" android:background="@drawable/bg_btn_mimoji_edit_black" android:layout_width="@dimen/dimen_gif_ll_clear_bg_width" android:layout_height="@dimen/dimen_gif_ll_clear_bg_height">
                    <ImageView android:id="@id/iv_accelerate" android:background="@drawable/ic_gif_accelerate" android:padding="@dimen/dimen_gif_iv_clear_bg_padding" android:layout_width="@dimen/dimen_gif_iv_clear_bg_width" android:layout_height="@dimen/dimen_gif_iv_clear_bg_height" android:scaleType="center" />
                    <TextView android:textColor="@color/white" android:gravity="center" android:id="@id/tv_accelerate" android:layout_width="wrap_content" android:layout_height="@dimen/dimen_gif_tv_clear_bg_height" android:layout_marginTop="@dimen/dimen_gif_tv_clear_bg_marginTop" android:text="@string/mimoji_gif_accelerate" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/ll_reverse" android:background="@drawable/bg_btn_mimoji_edit_black" android:layout_width="@dimen/dimen_gif_ll_clear_bg_width" android:layout_height="@dimen/dimen_gif_ll_clear_bg_height">
                    <ImageView android:id="@id/iv_reverse" android:background="@drawable/ic_gif_reverse" android:padding="@dimen/dimen_gif_iv_clear_bg_padding" android:layout_width="@dimen/dimen_gif_iv_clear_bg_width" android:layout_height="@dimen/dimen_gif_iv_clear_bg_height" android:scaleType="center" />
                    <TextView android:textColor="@color/white" android:gravity="center" android:id="@id/tv_reverse" android:layout_width="wrap_content" android:layout_height="@dimen/dimen_gif_tv_clear_bg_height" android:layout_marginTop="@dimen/dimen_gif_tv_clear_bg_marginTop" android:text="@string/mimoji_gif_reverse" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/ll_fuc_opera2" android:paddingLeft="@dimen/dimen_gif_ll_fuc_opera_padding_horizontal" android:paddingTop="@dimen/dimen_gif_ll_fuc_opera_paddingTop" android:paddingRight="@dimen/dimen_gif_ll_fuc_opera_padding_horizontal" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_gif_ll_fuc_opera_height">
            <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/ll_accelerate2" android:background="@drawable/bg_btn_mimoji_edit_black" android:layout_width="@dimen/dimen_gif_ll_clear_bg_width" android:layout_height="@dimen/dimen_gif_ll_clear_bg_height">
                    <ImageView android:id="@id/iv_accelerate2" android:background="@drawable/ic_gif_accelerate" android:padding="@dimen/dimen_gif_iv_clear_bg_padding" android:layout_width="@dimen/dimen_gif_iv_clear_bg_width" android:layout_height="@dimen/dimen_gif_iv_clear_bg_height" android:scaleType="center" />
                    <TextView android:textColor="@color/white" android:gravity="center" android:id="@id/tv_accelerate2" android:layout_width="wrap_content" android:layout_height="@dimen/dimen_gif_tv_clear_bg_height" android:layout_marginTop="@dimen/dimen_gif_tv_clear_bg_marginTop" android:text="@string/mimoji_gif_accelerate" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/ll_reverse2" android:background="@drawable/bg_btn_mimoji_edit_black" android:layout_width="@dimen/dimen_gif_ll_clear_bg_width" android:layout_height="@dimen/dimen_gif_ll_clear_bg_height">
                    <ImageView android:id="@id/iv_reverse2" android:background="@drawable/ic_gif_reverse" android:padding="@dimen/dimen_gif_iv_clear_bg_padding" android:layout_width="@dimen/dimen_gif_iv_clear_bg_width" android:layout_height="@dimen/dimen_gif_iv_clear_bg_height" android:scaleType="center" />
                    <TextView android:textColor="@color/white" android:gravity="center" android:id="@id/tv_reverse2" android:layout_width="wrap_content" android:layout_height="@dimen/dimen_gif_tv_clear_bg_height" android:layout_marginTop="@dimen/dimen_gif_tv_clear_bg_marginTop" android:text="@string/mimoji_gif_reverse" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout android:gravity="center_vertical" android:id="@id/rv_bottom_navigation_layout" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_gif_rv_bottom_navigation_layout_height" android:layout_marginLeft="@dimen/dimen_gif_rv_bottom_navigation_layout_margin_horizontal" android:layout_marginRight="@dimen/dimen_gif_rv_bottom_navigation_layout_margin_horizontal" android:layout_marginBottom="@dimen/dimen_gif_rv_bottom_navigation_layout_marginBottom" android:layout_alignParentBottom="true">
            <ImageView android:gravity="center" android:id="@id/iv_gif_back" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_gif_video_delete" />
            <TextView android:textSize="20.0dip" android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:id="@id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mimoji_gif_edit_title" android:layout_centerInParent="true" />
            <ImageView android:gravity="center" android:id="@id/iv_gif_confirm" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_gif_video_save" android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>